feat: added pipe logic for wc, refactoring, fixed bugs in tests